--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-deepin-icon-theme (15.12.29) unstable; urgency=low
+deepin-icon-theme (15.12.29-1) unstable; urgency=low
 
   * Autobuild Tag 15.12.29 
 
