--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (2023.08.25) unstable; urgency=medium
+
+  * 2023.08.25
+
+ -- chenke <chenke@deepin.org>  Fri, 25 Aug 2023 10:12:42 +0800
+
 deepin-icon-theme (2023.04.03) unstable; urgency=medium
 
   * add bloom status icons
