--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (2023.11.28) unstable; urgency=medium
+
+  * fix the icon of battery, include name issue and dark and light
+
+ -- chenchongbiao <chenchongbiao@deepin.org>  Tue, 28 Nov 2023 10:55:43 +0800
+
 deepin-icon-theme (2023.11.16) unstable; urgency=medium
 
   * fix: can not find existed
