--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (2024.03.04) unstable; urgency=medium
+
+  * fix #7050
+
+ -- Mike Chen <chenke@deepin.org>  Mon, 04 Mar 2024 17:29:53 +0800
+
 deepin-icon-theme (2024.01.31) unstable; urgency=medium
 
   * delete useless firefox icons.
