--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (2024.05.06) unstable; urgency=medium
+
+  * rename eye-care icon
+
+ -- Yutao Meng <mengyutao@deepin.org>  Tue, 07 May 2024 11:35:08 +0800
+
 deepin-icon-theme (2024.04.16) unstable; urgency=medium
 
   * release 2024.04.16
