--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-icon-theme (2024.05.28) unstable; urgency=medium
+
+  * release 2024.05.28
+
+ -- Mike Chen <chenke@deepin.org>  Thu, 13 Jun 2024 13:26:58 +0800
+
 deepin-icon-theme (2024.04.16) unstable; urgency=medium
 
   * release 2024.04.16
